# simple_data_loader

./: .gitignore  LICENSE  MANIFEST.in  README.md  data_loader.py  example_usage.py  pyproject.toml  requirements.txt  setup.py  test_data_loader_pytest.py
simple_data_loader/: __init__.py  simple_data_loader.py
tests/: __init__.py  test_data_loader_pytest.py
